FIX. z-index btn

--- a/src/app/pages/personal-account/components/partner-menu/partner-menu.component.scss
+++ b/src/app/pages/personal-account/components/partner-menu/partner-menu.component.scss
@@ -34,7 +34,7 @@
     padding: 12px;
     cursor: pointer;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-    z-index: 9999;
+    z-index: 11;
     transition: all 0.3s ease;
     display: flex;
     align-items: center;
